<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <GridLayout
            android:id="@+id/mainGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2">

            <ImageView
                android:id="@+id/the_phantom_menace"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/the_phantom_menace" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/starWars1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/star_wars_1" />

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail" />
            </TableLayout>

            <ImageView
                android:id="@+id/attack_clones"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/attack_clones" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/starWars2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/star_wars_2" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail" />
            </TableLayout>

            <ImageView
                android:id="@+id/revenge_of_the_sith"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/revenge_of_the_sith" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/starWars3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/star_wars_3" />

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail" />
            </TableLayout>
        </GridLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>